//import 'dart:html';

class Customer {
  final String imagePath;
  final String name;
  final String number;
  final String address;
  final String about;
  final String birthday;
  final String lastOrder;
  final String tag;
  final String age;

  const Customer({
    required this.imagePath,
    required this.name,
    required this.number,
    required this.address,
    required this.about,
    required this.birthday,
    required this.lastOrder,
    required this.tag,
    required this.age,
  });
}
